--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
             <div class="banner container">
               <div class="row">
-                <div class="banner-item">
+                <div class="banner-item item-1">
                   <img src="./img/content/banner1.jpg" alt="" />
                 </div>
-                <div class="banner-item">
+                <div class="banner-item item-2">
                  
                     <img src="./img/content/images/banner4.gif" alt="" />
                     <div class="banner-item-content">
@@ -95,10 +95,10 @@
 
                     </div>
                 </div>
-                <div class="banner-item">
+                <div class="banner-item item-3">
                   <img src="./img/content/banner3.jpg" alt="" />
                 </div>
-                <div class="banner-item">
+                <div class="banner-item item-4">
                     <img src="./img/content/images/banner5.gif" alt="" />
                  <div class="banner-item-content">
                      <div class="banner-item-title">Dumbbells</div>
@@ -109,10 +109,10 @@
 
                  </div>
                 </div>
-                <div class="banner-item">
+                <div class="banner-item item-5">
                   <img src="./img/content/banner2.jpg" alt="" />
                 </div>
-                <div class="banner-item">
+                <div class="banner-item item-6 ">
                  
                     <img src="./img/content/images/banner6.jpg" alt="" />
                   <div class="banner-item-content">
